@@ -16,16 +16,13 @@
 
 package sleeper.clients.status.report.compaction.job;
 
-import sleeper.clients.status.report.StatusReporterTestHelper;
 import sleeper.clients.status.report.job.query.JobQuery.Type;
 import sleeper.clients.testutil.ToStringConsoleOutput;
 import sleeper.compaction.job.CompactionJob;
 import sleeper.compaction.job.CompactionJobTestDataHelper;
-import sleeper.compaction.job.status.CompactionJobCommittedStatus;
 import sleeper.compaction.job.status.CompactionJobCreatedStatus;
-import sleeper.compaction.job.status.CompactionJobFinishedStatus;
-import sleeper.compaction.job.status.CompactionJobStartedStatus;
 import sleeper.compaction.job.status.CompactionJobStatus;
+import sleeper.core.partition.PartitionsBuilderSplitsFirst;
 import sleeper.core.record.process.ProcessRunTime;
 import sleeper.core.record.process.status.ProcessRun;
 
@@ -33,19 +30,20 @@ import java.io.PrintStream;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import static sleeper.clients.status.report.StatusReporterTestHelper.job;
 import static sleeper.clients.status.report.StatusReporterTestHelper.task;
 import static sleeper.clients.testutil.ClientTestUtils.exampleUUID;
 import static sleeper.compaction.job.CompactionJobStatusTestData.compactionCommittedStatus;
-import static sleeper.compaction.job.CompactionJobStatusTestData.compactionFinishedStatusUncommitted;
+import static sleeper.compaction.job.CompactionJobStatusTestData.compactionFinishedStatus;
 import static sleeper.compaction.job.CompactionJobStatusTestData.compactionStartedStatus;
 import static sleeper.compaction.job.CompactionJobStatusTestData.failedCompactionRun;
 import static sleeper.compaction.job.CompactionJobStatusTestData.finishedCompactionRun;
 import static sleeper.compaction.job.CompactionJobStatusTestData.jobCreated;
+import static sleeper.compaction.job.CompactionJobStatusTestData.jobFilesAssigned;
 import static sleeper.compaction.job.CompactionJobStatusTestData.startedCompactionRun;
 import static sleeper.core.record.process.RecordsProcessedSummaryTestHelper.summary;
 
@@ -57,56 +55,59 @@ public abstract class CompactionJobStatusReporterTestBase {
 
     protected static List<CompactionJobStatus> mixedJobStatuses() {
         CompactionJobTestDataHelper dataHelper = new CompactionJobTestDataHelper();
-        dataHelper.partitionTree(builder -> builder
-                .leavesWithSplits(
-                        Arrays.asList(partition("A"), partition("B"), partition("C"), partition("D")),
-                        Arrays.asList("ddd", "ggg", "kkk"))
+        dataHelper.partitionTreeFromSchema(schema -> PartitionsBuilderSplitsFirst
+                .leavesWithSplits(schema,
+                        List.of(partition("A"), partition("B"), partition("C"), partition("D")),
+                        List.of("ddd", "ggg", "kkk"))
                 .parentJoining(partition("E"), partition("A"), partition("B"))
                 .parentJoining(partition("F"), partition("E"), partition("C"))
                 .parentJoining(partition("G"), partition("F"), partition("D")));
 
-        CompactionJob job1 = dataHelper.singleFileCompaction(partition("A"));
-        Instant creationTime1 = Instant.parse("2022-09-17T13:33:12.001Z");
-        CompactionJob job2 = dataHelper.singleFileCompaction(partition("B"));
-        Instant creationTime2 = Instant.parse("2022-09-18T13:33:12.001Z");
-        Instant startedTime2 = Instant.parse("2022-09-18T13:34:12.001Z");
-        CompactionJob job3 = dataHelper.singleFileCompaction(partition("C"));
-        Instant creationTime3 = Instant.parse("2022-09-19T13:33:12.001Z");
-        Instant startedTime3 = Instant.parse("2022-09-19T13:34:12.001Z");
-        CompactionJob job4 = dataHelper.singleFileCompaction(partition("D"));
-        Instant creationTime4 = Instant.parse("2022-09-20T13:33:12.001Z");
-        CompactionJobStartedStatus started4 = compactionStartedStatus(Instant.parse("2022-09-20T13:34:12.001Z"));
-        CompactionJobFinishedStatus finished4 = compactionFinishedStatusUncommitted(summary(started4, Duration.ofMinutes(1), 600, 300));
-        CompactionJob job5 = dataHelper.singleFileCompaction(partition("E"));
-        Instant creationTime5 = Instant.parse("2022-09-21T13:33:12.001Z");
-        CompactionJobStartedStatus started5 = compactionStartedStatus(Instant.parse("2022-09-21T13:34:12.001Z"));
-        CompactionJobFinishedStatus finished5 = compactionFinishedStatusUncommitted(summary(started5, Duration.ofMinutes(1), 600, 300));
-        CompactionJobCommittedStatus committed5 = compactionCommittedStatus(Instant.parse("2022-09-21T13:36:12.001Z"));
-        CompactionJob job6 = dataHelper.singleFileCompaction(partition("F"));
-        Instant creationTime6 = Instant.parse("2022-09-22T13:33:12.001Z");
-        CompactionJobStartedStatus started6 = compactionStartedStatus(Instant.parse("2022-09-22T13:34:12.001Z"));
-        CompactionJobCommittedStatus committed6 = compactionCommittedStatus(Instant.parse("2022-09-22T13:36:12.001Z"));
-
-        CompactionJobStatus status1 = jobCreated(job1, creationTime1);
-        CompactionJobStatus status2 = jobCreated(job2, creationTime2,
-                startedCompactionRun(task(1), startedTime2));
-        CompactionJobStatus status3 = jobCreated(job3, creationTime3,
+        CompactionJobStatus status1 = jobCreated(
+                dataHelper.singleFileCompaction(job(1), partition("A")),
+                Instant.parse("2022-09-16T13:33:12.001Z"));
+        CompactionJobStatus status2 = jobFilesAssigned(
+                dataHelper.singleFileCompaction(job(2), partition("A")),
+                Instant.parse("2022-09-17T13:33:12.001Z"),
+                Instant.parse("2022-09-17T13:33:13.001Z"));
+        CompactionJobStatus status3 = jobFilesAssigned(
+                dataHelper.singleFileCompaction(job(3), partition("B")),
+                Instant.parse("2022-09-18T13:33:12.001Z"),
+                Instant.parse("2022-09-18T13:33:13.001Z"),
+                startedCompactionRun(task(1), Instant.parse("2022-09-18T13:34:12.001Z")));
+        CompactionJobStatus status4 = jobFilesAssigned(
+                dataHelper.singleFileCompaction(job(4), partition("C")),
+                Instant.parse("2022-09-19T13:33:12.001Z"),
+                Instant.parse("2022-09-19T13:33:13.001Z"),
                 failedCompactionRun(task(1),
-                        new ProcessRunTime(startedTime3, Duration.ofMinutes(1)),
+                        new ProcessRunTime(Instant.parse("2022-09-19T13:34:12.001Z"), Duration.ofMinutes(1)),
                         List.of("Something went wrong", "More details")));
-        CompactionJobStatus status4 = jobCreated(job4, creationTime4,
+        CompactionJobStatus status5 = jobFilesAssigned(
+                dataHelper.singleFileCompaction(job(5), partition("D")),
+                Instant.parse("2022-09-20T13:33:12.001Z"),
+                Instant.parse("2022-09-20T13:33:13.001Z"),
                 ProcessRun.builder().taskId(task(1))
-                        .startedStatus(started4).finishedStatus(finished4)
+                        .startedStatus(compactionStartedStatus(Instant.parse("2022-09-20T13:34:12.001Z")))
+                        .finishedStatus(compactionFinishedStatus(summary(Instant.parse("2022-09-20T13:34:12.001Z"), Duration.ofMinutes(1), 600, 300)))
                         .build());
-        CompactionJobStatus status5 = jobCreated(job5, creationTime5,
+        CompactionJobStatus status6 = jobFilesAssigned(
+                dataHelper.singleFileCompaction(job(6), partition("E")),
+                Instant.parse("2022-09-21T13:33:12.001Z"),
+                Instant.parse("2022-09-21T13:33:13.001Z"),
                 ProcessRun.builder().taskId(task(1))
-                        .startedStatus(started5).finishedStatus(finished5).statusUpdate(committed5)
+                        .startedStatus(compactionStartedStatus(Instant.parse("2022-09-21T13:34:12.001Z")))
+                        .finishedStatus(compactionFinishedStatus(summary(Instant.parse("2022-09-21T13:34:12.001Z"), Duration.ofMinutes(1), 600, 300)))
+                        .statusUpdate(compactionCommittedStatus(Instant.parse("2022-09-21T13:36:12.001Z")))
                         .build());
-        CompactionJobStatus status6 = jobCreated(job6, creationTime6,
+        CompactionJobStatus status7 = jobFilesAssigned(
+                dataHelper.singleFileCompaction(job(7), partition("F")),
+                Instant.parse("2022-09-22T13:33:12.001Z"),
+                Instant.parse("2022-09-22T13:33:13.001Z"),
                 ProcessRun.builder().taskId(task(1))
-                        .startedStatus(started6).statusUpdate(committed6)
+                        .startedStatus(compactionStartedStatus(Instant.parse("2022-09-22T13:34:12.001Z")))
+                        .statusUpdate(compactionCommittedStatus(Instant.parse("2022-09-22T13:36:12.001Z")))
                         .build());
-        return Arrays.asList(status6, status5, status4, status3, status2, status1);
+        return Arrays.asList(status7, status6, status5, status4, status3, status2, status1);
     }
 
     protected static List<CompactionJobStatus> mixedUnfinishedJobStatuses() {
@@ -118,8 +119,9 @@ public abstract class CompactionJobStatusReporterTestBase {
     protected static List<CompactionJobStatus> jobsWithMultipleRuns() {
         CompactionJobTestDataHelper dataHelper = new CompactionJobTestDataHelper();
 
-        CompactionJobStatus succeededThenFailed = jobCreated(dataHelper.singleFileCompaction(),
+        CompactionJobStatus succeededThenFailed = jobFilesAssigned(dataHelper.singleFileCompaction(job(1)),
                 Instant.parse("2022-10-10T10:00:00.001Z"),
+                Instant.parse("2022-10-10T10:00:01.001Z"),
                 failedCompactionRun(task(2), new ProcessRunTime(
                         Instant.parse("2022-10-10T10:01:15.001Z"), Duration.ofSeconds(30)),
                         List.of("Compaction has already been committed", "Failed database update")),
@@ -127,15 +129,17 @@ public abstract class CompactionJobStatusReporterTestBase {
                         Instant.parse("2022-10-10T10:01:00.001Z"), Duration.ofSeconds(20), 200L, 100L),
                         Instant.parse("2022-10-10T10:01:30.001Z")));
 
-        CompactionJobStatus failedThenInProgress = jobCreated(dataHelper.singleFileCompaction(),
+        CompactionJobStatus failedThenInProgress = jobFilesAssigned(dataHelper.singleFileCompaction(job(2)),
                 Instant.parse("2022-10-11T10:00:00.001Z"),
+                Instant.parse("2022-10-11T10:00:01.001Z"),
                 startedCompactionRun(task(1), Instant.parse("2022-10-11T10:02:00.001Z")),
                 failedCompactionRun(task(2), new ProcessRunTime(
                         Instant.parse("2022-10-11T10:01:00.001Z"), Duration.ofSeconds(30)),
                         List.of("Unexpected failure reading input file", "Some temporary IO problem")));
 
-        CompactionJobStatus twoFinishedRunsOneInProgress = jobCreated(dataHelper.singleFileCompaction(),
+        CompactionJobStatus twoFinishedRunsOneInProgress = jobFilesAssigned(dataHelper.singleFileCompaction(job(3)),
                 Instant.parse("2022-10-12T10:00:00.001Z"),
+                Instant.parse("2022-10-12T10:00:01.001Z"),
                 startedCompactionRun(task(1), Instant.parse("2022-10-12T10:02:00.001Z")),
                 finishedCompactionRun(task(2), summary(
                         Instant.parse("2022-10-12T10:01:15.001Z"), Duration.ofSeconds(30), 300L, 150L),
@@ -149,24 +153,26 @@ public abstract class CompactionJobStatusReporterTestBase {
 
     protected static List<CompactionJobStatus> jobsWithLargeAndDecimalStatistics() {
         CompactionJobTestDataHelper dataHelper = new CompactionJobTestDataHelper();
-        dataHelper.partitionTree(builder -> builder
-                .leavesWithSplits(Arrays.asList(partition("A"), partition("B")), Collections.singletonList("ggg"))
+        dataHelper.partitionTreeFromSchema(schema -> PartitionsBuilderSplitsFirst.leavesWithSplits(schema,
+                List.of(partition("A"), partition("B")), List.of("ggg"))
                 .parentJoining(partition("C"), partition("A"), partition("B")));
 
-        CompactionJob job1 = dataHelper.singleFileCompaction(partition("C"));
+        CompactionJob job1 = dataHelper.singleFileCompaction(job(1), partition("C"));
         Instant creationTime1 = Instant.parse("2022-10-13T12:00:00.000Z");
+        Instant filesAssignedTime1 = Instant.parse("2022-10-13T12:00:01.123Z");
         Instant startedTime1 = Instant.parse("2022-10-13T12:00:10.000Z");
         Instant committedTime1 = Instant.parse("2022-10-13T12:00:30.000Z");
-        CompactionJob job2 = dataHelper.singleFileCompaction(partition("C"));
+        CompactionJob job2 = dataHelper.singleFileCompaction(job(2), partition("C"));
         Instant creationTime2 = Instant.parse("2022-10-13T12:01:00.000Z");
+        Instant filesAssignedTime2 = Instant.parse("2022-10-13T12:01:05.000Z");
         Instant startedTime2 = Instant.parse("2022-10-13T12:01:10.000Z");
         Instant committedTime2 = Instant.parse("2022-10-13T14:01:30.000Z");
 
         return Arrays.asList(
-                jobCreated(job2, creationTime2, finishedCompactionRun("task-id",
+                jobFilesAssigned(job2, creationTime2, filesAssignedTime2, finishedCompactionRun("task-id",
                         summary(startedTime2, Duration.ofHours(2), 1000600, 500300),
                         committedTime2)),
-                jobCreated(job1, creationTime1, finishedCompactionRun("task-id",
+                jobFilesAssigned(job1, creationTime1, filesAssignedTime1, finishedCompactionRun("task-id",
                         summary(startedTime1, Duration.ofMillis(123), 600, 300),
                         committedTime1)));
     }
@@ -181,18 +187,6 @@ public abstract class CompactionJobStatusReporterTestBase {
                         .build())
                 .jobRunsLatestFirst(List.of())
                 .build());
-    }
-
-    public static String replaceStandardJobIds(List<CompactionJobStatus> job, String example) {
-        return StatusReporterTestHelper.replaceStandardJobIds(job.stream()
-                .map(CompactionJobStatus::getJobId)
-                .collect(Collectors.toList()), example);
-    }
-
-    public static String replaceBracketedJobIds(List<CompactionJobStatus> job, String example) {
-        return StatusReporterTestHelper.replaceBracketedJobIds(job.stream()
-                .map(CompactionJobStatus::getJobId)
-                .collect(Collectors.toList()), example);
     }
 
     public String verboseReportString(
