@@ -29,7 +29,9 @@ import sleeper.core.statestore.FileReferenceFactory;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 import java.util.function.Consumer;
+import java.util.function.Function;
 
 import static sleeper.configuration.properties.InstancePropertiesTestHelper.createTestInstanceProperties;
 import static sleeper.configuration.properties.table.TablePropertiesTestHelper.createTestTableProperties;
@@ -67,24 +69,37 @@ public class CompactionJobTestDataHelper {
     }
 
     public void partitionTree(Consumer<PartitionsBuilder> config) {
+        partitionTreeFromSchema(schema -> {
+            PartitionsBuilder builder = new PartitionsBuilder(schema);
+            config.accept(builder);
+            return builder;
+        });
+    }
+
+    public void partitionTreeFromSchema(Function<Schema, PartitionsBuilder> config) {
         if (isPartitionsSpecified()) {
             throw new IllegalStateException("Partition tree already initialised");
         }
-        setPartitions(createPartitions(config));
+        PartitionsBuilder builder = config.apply(SCHEMA);
+        setPartitions(builder.buildList());
     }
 
     public CompactionJob singleFileCompaction() {
-        return singleFileCompaction(singlePartition());
+        return singleFileCompaction(UUID.randomUUID().toString(), singlePartition());
     }
 
-    public CompactionJob singleFileCompaction(String partitionId) {
-        return singleFileCompaction(partitionTree.getPartition(partitionId));
+    public CompactionJob singleFileCompaction(String jobId) {
+        return singleFileCompaction(jobId, singlePartition());
     }
 
-    public CompactionJob singleFileCompaction(Partition partition) {
+    public CompactionJob singleFileCompaction(String jobId, String partitionId) {
+        return singleFileCompaction(jobId, partitionTree.getPartition(partitionId));
+    }
+
+    public CompactionJob singleFileCompaction(String jobId, Partition partition) {
         validatePartitionSpecified(partition);
-        return jobFactory.createCompactionJob(
-                Collections.singletonList(fileInPartition(partition)),
+        return jobFactory.createCompactionJob(jobId,
+                List.of(fileInPartition(partition)),
                 partition.getId());
     }
 
@@ -114,12 +129,6 @@ public class CompactionJobTestDataHelper {
 
     private List<Partition> createSinglePartition() {
         return new PartitionsFromSplitPoints(SCHEMA, Collections.emptyList()).construct();
-    }
-
-    private List<Partition> createPartitions(Consumer<PartitionsBuilder> config) {
-        PartitionsBuilder builder = new PartitionsBuilder(SCHEMA);
-        config.accept(builder);
-        return builder.buildList();
     }
 
     private void validatePartitionSpecified(Partition checkPartition) {
